# EdgeCanvas

./: .env.example  .gitignore  GITHUB_워크플로_가이드.md  README.md  install.bat  install.sh  requirements.txt  단위구현계획서.md  재정렬_분석보고.md
.cursor/: README.md
.cursor/agents/: plan-auditor.md  task-reviewer.md
.cursor/prompts/: README.md  pass1_sonnet_kickoff.md  pass2_opus_review.md  task_closeout.md
.cursor/rules/: coding-standards.mdc  github-ops.mdc  task-workflow.mdc
.cursor/skills/plan-consistency-check/: SKILL.md
.cursor/skills/task-kickoff/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  spike.yml  task.yml
docs/: environment_decision.md
docs/setup/: esp-idf-windows.md
docs/verification/: 1주차_체크포인트_수동검증가이드.md  T-001_env_setup.txt  T-002_api_test.txt  T-003_idf_env_log.txt  T-004_flash_success.txt  T-005_run_manager_test.txt  T-008_extracted_tables.md  T-009_mm_eval.txt  T-010_pytest.txt  T-010_varco_art_note.md  T-012_environment_matrix.md  T-101_cli_help.txt  T-101_pytest.txt  T-102_validator_test.txt  T-201_chunk_output.json  T-202_spec_result.json  T-203_kb_schema.json  T-301_mapped_config.h  T-302_prompt_draft.md  T-303_parsed_tree.json  T-304_token_trim_log.txt  T-402_converted_image.c  T-503_parsed_error.json  T-604_ocr_readout.json  T-702_healing_rounds.json  T-703_sample_report.md  T-801_build_check.txt  T-802_process_kill.txt  T-850_wasm_success.txt  T-851_swagger.json  T-852_pytest.txt  T-901_e2e_pass_report.json  T-902_benchmark_scores.txt  T-904_user_verification.txt
hw/esp32p4-bsp-demo/: CMakeLists.txt  README.md  sdkconfig.defaults
hw/esp32p4-bsp-demo/main/: main.c
scripts/: create_issues.ps1  dedup_issues.py  export_idf_env.ps1  find_dups.py  gh_issues.py  reorganize_plan.py  verify_issues.py
src/agent/: __init__.py  code_parser.py  document_parser.py  healing_controller.py  orchestrator.py  report_generator.py  token_manager.py  varco_art.py
src/agent/prompts/: __init__.py  layout_generator.py
src/asset/: image_converter.py  image_generator.py
src/builder/: __init__.py  board_profile_mapper.py  error_parser.py
src/builder/template/: board_config.h.in
src/builder/template/cores3/: CMakeLists.txt  README.md
src/builder/template/esp32p4/: CMakeLists.txt  README.md
src/cli/: __init__.py  main.py  validator.py
src/common/: idf_env.py  install_bootstrap.py  logger.py  p4_bsp_flash.py  run_manager.py  schema.py  upstage_client.py
src/dashboard/: app.py
src/evaluation/: benchmark.py
src/parser/: __init__.py  document_parser.py  kb_converter.py  prompts.py  spec_extractor.py
src/server/: __init__.py  app.py
src/simulator/: CMakeLists.txt  README.md  check_build.ps1  lv_conf.h  main.c  sim_driver.py  wasm_build.py
src/simulator/web/: Makefile  README.md  index.html
src/verifier/: text_evaluator.py  vision_evaluator.py
tests/: test_benchmark.py  test_board_mapper.py  test_cli.py  test_cli_validator.py  test_code_parser.py  test_compiler_error_parser.py  test_dashboard.py  test_document_parser.py  test_env_os_docker.py  test_env_setup.py  test_healing_controller.py  test_idf_env.py  test_image_converter.py  test_image_generator.py  test_install_scripts.py  test_kb_converter.py  test_orchestrator.py  test_p4_bsp_flash_plan.py  test_parser_chunking.py  test_prompt_generation.py  test_report_generator.py  test_run_manager.py  test_sim_driver.py  test_solar_vision.py  test_spec_extractor.py  test_text_evaluator.py  test_token_manager.py  test_upstage_client.py  test_varco_api.py  test_vision_evaluator.py  test_wasm_build.py  test_web_server.py
tests/data/: expected_kb.json  ui_layout_expected.json  ui_screens.c  ui_screens_irregular.c
tests/data/benchmark/manifests/: run_01.json  run_02.json  run_03.json  run_04.json  run_05.json  run_06.json  run_07.json  run_08.json  run_09.json  run_10.json
tests/data/varco_received/: .gitkeep
tests/e2e/: test_cli_pipeline_hw.py  test_cli_pipeline_sim.py
